--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <html>
 <head>
+<link rel="shortcut icon" href="images/ebay-header.jpeg" type="image/jpeg">
+<title> Electronics, Cars, Fashion, Collectibles, Coupons and More | eBay </title>
 <link rel='stylesheet' href='/stylesheets/style.css' />
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
@@ -227,5 +229,8 @@ $("#gh-ac").autocomplete({
 </div>
 </div>
 </div>
+
+<div class="trending-collections-browse-all-box" _sp="p2057337.m2719.l4977">Get inspired! Explore all of our Trending Collections.</div>
+
 </body>
 </html>
