--- a/views/personSearch.ejs
+++ b/views/personSearch.ejs
@@ -1,5 +1,7 @@
 <html>
 <head>
+<link rel="shortcut icon" href="images/ebay-header.jpeg" type="image/jpeg">
+<title> eBay person search</title>
 <link rel='stylesheet' href='/stylesheets/style.css' />
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
