--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"><title>Get started with eBay</title>
+<html lang="en"><head><link rel="shortcut icon" href="images/ebay-header.jpeg" type="image/jpeg"><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"><title>Get started with eBay</title>
 <script type="text/javascript">var layer = false;</script>
 <link href="https://secureir.ebaystatic.com/rs/v/kp2d0yxoguy0xnebuz2qnu0zc2t.css" type="text/css" rel="stylesheet">
 <link href="https://secureir.ebaystatic.com/rs/v/ryt1iptmaazydbfqvfb5q025xe4.css" type="text/css" rel="stylesheet">
@@ -80,7 +80,7 @@
 	</script>
 <body>
 <div class="sz980"><div class="pgWidth"><div id="gh" class="gh-flex gh-w gh-minH no-touch ">
-<table class="gh-tbl"><tbody><tr><td class="gh-td"><a href="" class="iclg" _sp="m570.l2586" id="gh-la">eBay
+<table class="gh-tbl"><tbody><tr><td class="gh-td"><a href="/" class="iclg" _sp="m570.l2586" id="gh-la">eBay
 <img width="250" height="200" style="clip:rect(47px, 118px, 95px, 0px); position:absolute; top:-47px;left:0" alt="" src="https://secureir.ebaystatic.com/rs/v/fxxj3ttftm5ltcqnto1o4baovyl.png" id="gh-logo"></a></td></tr></tbody></table></div>
 <h1 class="mg"><span class="shpt" id="maincontent">Get started with eBay</span><a name="mainContent" tabindex="-1" style="top: 0px; left: -9999px; position: absolute;">Get started with eBay</a></h1><table class="mgtb " role="presentation"><tr><td width="80%" valign="top">
 <div class="pdb20"><h2 class="fntNml"><span class="col"> Create your personal account.</span></h2></div></td><td width="20%" valign="top"></td></tr><tr><td width="80%" valign="top" class="contd cntCr"><div class="prg">
