--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,12 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Welcome to eBay: Sign in</title>
+<html lang="en">
+<head>
+<link rel="shortcut icon" href="images/ebay-header.jpeg" type="image/jpeg">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+<title>Welcome to eBay: Sign in</title>
+
 <meta content="text/html">
 <script>
 	
