--- a/views/productDetails.ejs
+++ b/views/productDetails.ejs
@@ -117,18 +117,24 @@ bootbox.dialog({
 	<div id="CenterPanel">
 	<div id="PicturePanel" class="pp-c">
 		<div id="mainImgHldr" style="width:300px; !important" align="center" >
-			<img id="icImg" class="img img300" style="border: 1px solid #ccc !important;" itemprop="image" src="http://i.ebayimg.com/00/s/NjY4WDU5NQ==/z/DLkAAOSw7NNUExTR/$_35.JPG" style="" onload="picTimer=new Date().getTime();" clk="0"  mskuskip="false">
+			<img id="icImg" class="img img300" style="border: 1px solid #ccc !important;" itemprop="image" src="/images/<%=productDetails[0].category_id%>.JPG"  style="" onload="picTimer=new Date().getTime();" clk="0"  mskuskip="false">
 		</div>
 		<div class="spacer"></div>
 		<a href="" target="_blank" style="float: left; width:295px;"><img src="http://p.ebaystatic.com/aw/ads/houseads/Q22014_DailyDeals_Generic_Affiliates_Remnant_300x250.gif" border="0" width=295px alt="Daily Deals"></a>
 	</div>
 	<h1 class="it-ttl" itemprop="name" id="itemTitle"><span class="g-hdn">Details about  &nbsp;</span><%=productDetails[0].product_name%></h1>
+	<h2 id="subTitle" class="it-sttl"><%=productDetails[0].product_desc%></h2>	
 	<div class="it-rlBr  it-rlBr300 " style=""> </div>
 	<div class="u-flL lable"> Item condition:</div>	
 	<div class="u-flL condText"> <%=productDetails[0].product_condition%></div>	
 	<div class="spacer"></div>
-	<div class="spacer"></div>
-	<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+	<div class="u-flL lable" style="padding-left:16px;"> Item Status:</div>	
+	<div class="u-flL condText"> <%=productDetails[0].product_status%></div>
+	<%if (productDetails[0].product_listed_as === 'Fixed Price') {%>
+		<span id="qtySubTxt"> <span class="u-flL lable">&nbsp;&nbsp;(<%=productDetails[0].units_in_stock%> piece(s) available)</span></span>
+	<% } %>
 	<% if (productDetails[0].product_status !== 'Sold' && productDetails[0].product_listed_as === 'Auction') { %>
 		<div class="u-flL lable" style="width: 100px; text-align:right;"> Time left:</div>
 		<div class="u-flL condText"><div id="bidexpiry-timer"></div> </div>	
@@ -188,7 +194,7 @@ bootbox.dialog({
 	<div class="actPanel  vi-noborder" style="width: 390px;">	
 		<div class="spacer"></div>
 		<div class="u-cb">
-			<div class="vi-bbox-dspn u-flL lable pdT4" style="padding-left:5px;">Product Price:</div> 
+			<div class="vi-bbox-dspn u-flL lable pdT4" style="padding-left:23px;">Item Price:</div> 
 			<div class="u-flL w29 vi-price" itemprop="offers" itemscope="itemscope" itemtype="http://schema.org/Offer" style="width:30%">
 				<span class="notranslate" id="prcIsum_bidPrice" itemprop="price">USD&nbsp;<%=productDetails[0].price_per_unit%></span>
 				<div class="spacer"></div>
@@ -197,7 +203,7 @@ bootbox.dialog({
 		<div class="vi-bbox-dspn u-cb spcr"></div>
 		<div class="spacer"></div>
 		<div class="u-cb">
-			<div class="vi-bbox-dspn u-flL lable pdT3" style="width:26%; text-align: right;">Quantity:</div>
+			<div class="vi-bbox-dspn u-flL lable pdT3" style="width:25.5%; text-align: right;">Quantity:</div>
 			<div class="u-flL u-b w29 " id="" style="width:30%">
 				<input id="quantity" placeholder="" aria-labelledby="productqtylabel" class="notranslate MaxBidClass" type="text" autocomplete="off" size="11" maxlength="10" name="productqty" value=""> 
 			</div>
@@ -217,7 +223,7 @@ bootbox.dialog({
 			<!-- //TODO : remove hardcoded ID for Shipping cost -->
 		<div class="u-cb spcr vi-bbox-spcr10"></div>
 	</div>
-	<div class="vi-bbox-dspn u-flL lable pdT3" style="width:26%; text-align: right;">Seller Rating:</div>
+	<div class="vi-bbox-dspn u-flL lable pdT3" style="width:25.5%; text-align: right;">Seller Rating:</div>
 	<div class="u-flL u-b w29 " id="" style="width:30%">
 		<input id="seller_rating" placeholder="" aria-labelledby="sellerratinglabel" class="notranslate MaxBidClass" type="text" autocomplete="off" size="11" maxlength="10" name="seller_rating" value=""> 
 	</div>
