--- a/views/create-product.ejs
+++ b/views/create-product.ejs
@@ -141,9 +141,10 @@
 	<table>
 		<tr><td><input type="submit" value="Create Product"></td></tr>
 		<tr><td><input type="button" onClick="location.href='/seller/<%=seller_id%>'" value="Cancel"></td></tr>
-					
+	<div><h3 font color="red"><%=errMsg%></h3></div>				
 	</table>
 	</form>
+	
 	</div>
 	
 <script>
