--- a/views/edit-product.ejs
+++ b/views/edit-product.ejs
@@ -150,7 +150,7 @@
 			</tr>
 			<tr>
 				<td></td>
-				<td><input type="button" onClick="location.href='/seller/<%=product[0].seller_id%>/about'"
+				<td><input type="button" onClick="location.href='/seller/<%=product[0].seller_id%>'"
 					value="Cancel"></td>
 			</tr>
 		</table>
