--- a/views/seller-screen.ejs
+++ b/views/seller-screen.ejs
@@ -1,10 +1,14 @@
-<html class="locale-us" lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><link rel="stylesheet" media="screen" type="text/css" href="/javax.faces.resource/primefaces.css.jsf?ln=primefaces&amp;v=4.0"><script type="text/javascript" src="/javax.faces.resource/jquery/jquery.js.jsf?ln=primefaces&amp;v=4.0"><!--
-
-//--></script><script type="text/javascript" src="/javax.faces.resource/primefaces.js.jsf?ln=primefaces&amp;v=4.0"><!--
-
-//--></script><script type="text/javascript" src="/javax.faces.resource/jsf.js.jsf?ln=javax.faces"><!--
-
-//--></script><title>Sell on eBay</title>
+<html class="locale-us" lang="en" xmlns="http://www.w3.org/1999/xhtml"><head>
+<title>Sell on eBay</title>
+<style>
+.product-details {
+border-top: 1px solid #e5e5e1;
+padding-top: 15px;
+padding-bottom: 15px;
+font-size: small;
+width: auto;
+}
+</style>
 <!-- meta --><meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
 <meta http-equiv="cache-control" content="max-age=0"><meta http-equiv="cache-control" content="no-cache">
@@ -46,7 +50,7 @@
  		<link rel="shortcut icon" href="images/ebay-header.jpeg" type="image/jpeg">
 		<title> eBay Seller screen</title>
 		</head>
-		<body id="body" class="listingPage" style="cursor: default;"><script type="text/javascript"> myfaces.config._autoeval = true; </script><!--[if IE 7]><form action="http://csr.ebay.com/cse/browser_upgrade.jsf" method="get" name="old_browser_redirect"></form><script> document.forms['old_browser_redirect'].submit() </script>
+		<body id="body" class="listingPage" style="cursor: default;"><!--[if IE 7]><form action="http://csr.ebay.com/cse/browser_upgrade.jsf" method="get" name="old_browser_redirect"></form><script> document.forms['old_browser_redirect'].submit() </script>
 		
 		<![endif]--><!-- RcmdId cse,RlogId t6%60vcpfgh%7Fw%3F%3Cdka7e34e*%605ga-14a0591dd83-0xad --><!--[if IE 8]><div class="lt-ie9 ie8"><![endif]--><h1 class="offScr">Fill out the details below to complete your listing.</h1><a href="#mainContent" class="acc-skip-to-mc">Skip to main content</a><div class="header-wrap"><div class="container hidden-phone"><div class="row"><div class="span5"><div class="logo"><a id="lnkHdrLogo" href="/"><img id="imgEbayLogo" src="http://ir.ebaystatic.com/pictures/aw/pics/logos/logoEbayNew.png" border="0" alt="eBay logo"></a></div></div><span class="span19"><a id="mainContent" name="mainContent" tabindex="-1"></a><div id="lyrHdrControls" class="controls"></div></span></div></div><div id="mw-hdr" class="visible-phone"><div id="tbdHdr"><div class="cl lgoCl"><a id="lnkHdrLogoMweb" href="http://m.ebay.com/home?mfs=Header"><img id="imgEbayLogoMweb" src="http://ir.ebaystatic.com/pictures/aw/pics/logos/logoEbayNew.png" class="headerLogo" border="0" alt="eBay logo"></a></div></div></div></div><div class="hidden-desktop clr scroll-to-fixed-fixed sticky" id="mobileSidebar" style="z-index: 1000; position: fixed; top: 0px; margin-left: 0px; left: 0px;"><a href="javascript:;" id="listingFeesMobile" name="listingFeesMobile" class="fees-total-wrap">
 					 
@@ -61,7 +65,7 @@
 		    
 		<span class="tblts"><a id="rmcallmeclk" class="ccclk" available="" href="javascript:;" ur="2"><b class="wcontact-links wcallme rp"></b><span class="mtxt"> Call me </span></a></span>
 		 
-	</span></div><div class="container"><a href="#" onclick="return myfaces.oam.submitForm('selling','lnkSwitchForm');" id="lnkSwitchForm" aria-hidden="hidden" tabindex="-1"></a><ul id="errs"><li class="hdn">Draft has a listing policy warning/informational message</li></ul><div id="lyrCategoryBreadcrumb" class="row category hidden-phone"><div class="span24"><div class="well well-small"></div></div></div><div id="mainFormWrap" class="row" inflow=""><div id="mainForm" class="span19"><a name="describeSec"></a><span id="ccSecHdgPhonedescribe" class="mweb-h2 visible-phone"><span id="describe">Describe your item</span></span><span id="ccSecdescribe"><div class="describe well" inflow="{ &quot;property_name&quot; : &quot;sectionId&quot;, &quot;property_value&quot; : &quot;describe&quot;, &quot;section_title&quot; : &quot;Describe your item&quot; }"><div id="ccSecHdgdescribe" class="section-heading hidden-phone"><h2 id="describe">Welcome...</h2></div>
+	</span></div><div class="container"><ul id="errs"><li class="hdn">Draft has a listing policy warning/informational message</li></ul><div id="lyrCategoryBreadcrumb" class="row category hidden-phone"><div class="span24"><div class="well well-small"></div></div></div><div id="mainFormWrap" class="row" inflow=""><div id="mainForm" class="span19"><a name="describeSec"></a><span id="ccSecHdgPhonedescribe" class="mweb-h2 visible-phone"><span id="describe">Describe your item</span></span><span id="ccSecdescribe"><div class="describe well" inflow="{ &quot;property_name&quot; : &quot;sectionId&quot;, &quot;property_value&quot; : &quot;describe&quot;, &quot;section_title&quot; : &quot;Describe your item&quot; }"><div id="ccSecHdgdescribe" class="section-heading hidden-phone"><h2 id="describe">Welcome...</h2></div>
 	<table class="mgtb " role="presentation"><tbody><tr><td width="80%" valign="top">
 	</td></tr><tr><td width="20%" valign="top" id="lcont"><div class="pdLft"><div><div class="si-lr"><div class="si-re"><div class="si-pd"><div class="si-sp si-fl g-hlp si-fn"><div>
  <h3><%=details[0].person_fname%>'s sales page</h3> 
@@ -103,14 +107,19 @@
  <br>
  <%if(sellerHome == 'Y'){%> <!-- inner if -->
  <div>
- <h2>History</h2>
+ <h2>Seller History</h2>
  <%if(history.length == 0){%>
  You have not sold any product yet.
   <%} else{%>
  <%for(var i=0; i<history.length;i++){%>
- 	<p>
- <%=history[i].quantity%> pieces of <a href='/product/<%=history[i].product_id%>'><%=history[i].product_name%></a> sold for <%=history[i].order_amount%> on <%=history[i].order_date%> 
- 	</p>
+	          	 <div class="product-details">
+	          	 	<table><tr><td style= "width:150px; font-weight: bold; font-size: small;">
+	          	 	Product Name:</td><td style= "width:350px; font-size: small;"> <%=history[i].product_name%> </td><td style= "width:150px; font-weight: bold; font-size: small;">
+	          	 	Order Value: </td><td style= "width:350px; font-size: small;">$<%=history[i].order_amount%></td></tr>
+	          	 	<tr><td><br></td><td></td><td></td></tr><tr><td style= "width:150px; font-weight: bold; font-size: small;">
+	          	 	Order Date: </td><td style= "width:350px; font-size: small;"><%=history[i].order_date%></td><td style= "width:150px; font-weight: bold; font-size: small;">
+	          	 	Quantity:</td><td style= "width:350px; font-size: small;"> <%=history[i].quantity%></td></tr></table>
+	          	 </div> 
  <%}%>
  <%}%>
  </div>
@@ -148,11 +157,11 @@ function submitform(operation, form) {
 </script>
 	
 </div>
-<link rel="stylesheet" media="screen" type="text/css" href="/javax.faces.resource/primefaces.css.jsf?ln=primefaces&amp;v=4.0"><script type="text/javascript" src="/javax.faces.resource/jquery/jquery.js.jsf?ln=primefaces&amp;v=4.0"><!--
+<!--
 
-//--></script><script type="text/javascript" src="/javax.faces.resource/primefaces.js.jsf?ln=primefaces&amp;v=4.0"><!--
+//--></script><!--
 
-//--></script><script type="text/javascript" src="/javax.faces.resource/jsf.js.jsf?ln=javax.faces"><!--
+//--></script><!--
 
 //--></script><title>Sell on eBay</title>
 <!-- meta --><meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -195,7 +204,7 @@ function submitform(operation, form) {
 		<link rel="stylesheet" href="/stylesheets/anytime.css">
  	
 		
-		<script type="text/javascript"> myfaces.config._autoeval = true; </script><!--[if IE 7]><form action="http://csr.ebay.com/cse/browser_upgrade.jsf" method="get" name="old_browser_redirect"></form><script> document.forms['old_browser_redirect'].submit() </script><![endif]--><!-- RcmdId cse,RlogId t6%60vcpfgh%7Fw%3F%3Cdka7e34e*%605ga-14a0591dd83-0xad --><!--[if IE 8]><div class="lt-ie9 ie8"><![endif]--><h1 class="offScr">Fill out the details below to complete your listing.</h1><a href="#mainContent" class="acc-skip-to-mc">Skip to main content</a><div class="header-wrap"></div><div class="hidden-desktop clr scroll-to-fixed-fixed sticky" id="mobileSidebar" style="z-index: 1000; position: fixed; top: 0px; margin-left: 0px; left: 0px;"><a href="javascript:;" id="listingFeesMobile" name="listingFeesMobile" class="fees-total-wrap">
+		<!--[if IE 7]><form action="http://csr.ebay.com/cse/browser_upgrade.jsf" method="get" name="old_browser_redirect"></form><script> document.forms['old_browser_redirect'].submit() </script><![endif]--><!-- RcmdId cse,RlogId t6%60vcpfgh%7Fw%3F%3Cdka7e34e*%605ga-14a0591dd83-0xad --><!--[if IE 8]><div class="lt-ie9 ie8"><![endif]--><h1 class="offScr">Fill out the details below to complete your listing.</h1><a href="#mainContent" class="acc-skip-to-mc">Skip to main content</a><div class="header-wrap"></div><div class="hidden-desktop clr scroll-to-fixed-fixed sticky" id="mobileSidebar" style="z-index: 1000; position: fixed; top: 0px; margin-left: 0px; left: 0px;"><a href="javascript:;" id="listingFeesMobile" name="listingFeesMobile" class="fees-total-wrap">
 					 
 </a><div id="feesItemized"><a href="javascript:;" id="listingFeesMobile" name="listingFeesMobile" class="fees-total-wrap"></a><div class="fees-itemized-wrap"><a href="javascript:;" id="listingFeesMobile" name="listingFeesMobile" class="fees-total-wrap"><h2>Listing fees</h2><div class="row-fluid fee"><div class="span16 fee-detail">Insertion fees:
 								</div><div class="span6 fee-amount pull-right">Free
