--- a/views/create-product.ejs
+++ b/views/create-product.ejs
@@ -153,7 +153,7 @@
   $('#sell_mode').change(function(){
 
 	   var selection = $(this).val();
-	   if(selection == 'Fixed-Price')
+	   if(selection == 'Fixed Price')
 	   {
 	      $('#fixed-price').show();
 	      $('#auction').hide();
